--- a/templates/admin/partials/sidebar.twig
+++ b/templates/admin/partials/sidebar.twig
@@ -31,6 +31,12 @@
                             </div>
                         </a>
                     </div>
+                    <!-- parent pages-->
+                    <div class="nav-item-wrapper"><a class="nav-link label-1" href="/admin/test" role="button" data-bs-toggle="" aria-expanded="false">
+                            <div class="d-flex align-items-center"><span class="nav-link-icon"><span data-feather="calendar"></span></span><span class="nav-link-text-wrapper"><span class="nav-link-text">Test</span></span>
+                            </div>
+                        </a>
+                    </div>
                 </li>
                 <li class="nav-item">
                     <!-- label-->
